spacing issues

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -213,7 +213,7 @@
   padding: 2rem;
 }
 
-.projects-section .card {
+.card {
   margin: 5rem 1rem !important;
 }
 
